# yolo-vehicle-detection

./: .gitignore  CMakeLists.txt  README.md
scripts/: export_onnx.bat  export_onnx.py
src/: detector.cpp  segmenter.cpp  utils.cpp  utils.h
